# shakersynth

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Shakersynth.lua  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  shakersynth.code-workspace  shakersynth.py
.buildkite/: build.ps1  pipeline-stage2.yml  pipeline.yml
.github/workflows/: build-package.yml  python-package.yml  python-publish.yml  run-tests.yml
receiver/: simshaker.py
shakersynth/: Shakersynth.lua  __init__.py  __main__.py
shakersynth/aircraft/: __init__.py  aircraft.py
shakersynth/config/: config.py  loader.py
shakersynth/receiver/: __init__.py  shakersynth.py  simshaker.py
shakersynth/synth/: __init__.py  bump.py  gun.py  rotor.py  synth.py
synth/: rotor.py
tests/: conftest.py  smoketest.py  test_aircraft.py  test_config.py  test_receiver.py  test_rotor_synth.py  test_simshaker.py
